@@ -1,1 +1,1 @@
-usr/share/python-django-hyperkitty
+usr/share/python3-django-hyperkitty
